--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "firebase": "^11.3.1",
     "socket.io-client": "^4.8.0",
     "vue": "^3.4.29",
     "vue-3-socket.io": "^1.0.5",
     "vue-router": "^4.3.3",
-    "vue-socket.io": "^3.0.10"
+    "vue-socket.io": "^3.0.10",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
